--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <model-viewer
         src="/Ranger.gltf"
         ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878"
-        poster="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b%2Fposter-astronaut.png?v=1599079951717"
+        poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
         camera-controls
