--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
         src="/Ranger.gltf"
-        ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878"
+        ios-src="/Ranger.glb"
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
-        camera-controls
-        auto-rotate
-        ar 
         ar-modes="scene-viewer webxr quick-look" camera-controls 
       >
       </model-viewer>
