--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="card">
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="/Ranger.gltf"
+        src="/Ranger.glb"
         ios-src="/Ranger.glb"
         poster="#"
         alt="Ranger Performance"
