--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
-        ar-modes="scene-viewer webxr quick-look" camera-controls 
-      >
+        ar
+        ar-modes="scene-viewer webxr quick-look" camera-controls >
       </model-viewer>
       <section class="attribution">
         <span>
