--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="card">
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="/Ranger.glb"
-        ios-src="/Ranger.glb"
+        src="/ranger/Ranger.gltf"
+        ios-src="#"
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
