--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="card">
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="/ranger/Ranger.gltf"
+        src="https://res.cloudinary.com/drd6wxmod/image/upload/v1695335955/jtvhwhekss2zmklpcrz8.glb"
         ios-src="#"
         poster="#"
         alt="Ranger Performance"
