--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         alt="Ranger Performance"
         shadow-intensity="1"
         ar
-        ar-modes="scene-viewer webxr quick-look" camera-controls >
+        ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y" >
       </model-viewer>
       <section class="attribution">
         <span>
