--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="card">
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger.glb?v=1701711551799"
+        src=""
         ios-src="#"
         poster="#"
         alt="Ranger Performance"
