--- a/index.html
+++ b/index.html
@@ -12,7 +12,53 @@
     <div id="card">
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src=""
+        src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger.glb?v=1701711551799"
+        ios-src="#"
+        poster="#"
+        alt="Ranger Performance"
+        shadow-intensity="1"
+        ar
+        ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y" >
+      </model-viewer>
+      <section class="attribution">
+        <span>
+          <h1>Ranger Performance</h1>
+          <span
+            >Versão
+           
+              >Teste</a
+            ></span
+          >
+        </span>
+      </section>
+    </div>
+    <div id="card">
+      <!-- All you need to put beautiful, interactive 3D content on your site: -->
+      <model-viewer
+        src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger.glb?v=1701711551799"
+        ios-src="#"
+        poster="#"
+        alt="Ranger Performance"
+        shadow-intensity="1"
+        ar
+        ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y" >
+      </model-viewer>
+      <section class="attribution">
+        <span>
+          <h1>Ranger Performance</h1>
+          <span
+            >Versão
+           
+              >Teste</a
+            ></span
+          >
+        </span>
+      </section>
+    </div>
+    <div id="card">
+      <!-- All you need to put beautiful, interactive 3D content on your site: -->
+      <model-viewer
+        src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger.glb?v=1701711551799"
         ios-src="#"
         poster="#"
         alt="Ranger Performance"
