--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </model-viewer>
       <section class="attribution">
         <span>
-          <h1>Ranger Performance</h1>
+          <h1>Sport/Style - Furios</h1>
           <span
             >Versão
            
@@ -68,7 +68,7 @@
       </model-viewer>
       <section class="attribution">
         <span>
-          <h1>Ranger Performance</h1>
+          <h1>Regular Cab Troller Co-Brand</h1>
           <span
             >Versão
            
