--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <model-viewer
         src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger.glb?v=1701711551799"
         style="background-color: aliceblue;"
-        ios-src="#"
+        ios-src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger-AR.usdz?v=1701718330863"
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
@@ -37,8 +37,8 @@
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
         src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger.glb?v=1701711551799"
-        style="background-color: aliceblue;
-        ios-src="#"
+        style="background-color: aliceblue;"
+        ios-src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger-AR.usdz?v=1701718330863"
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
@@ -61,8 +61,8 @@
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
         src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger.glb?v=1701711551799"
-        style="background-color: aliceblue;
-        ios-src="#"
+        style="background-color: aliceblue;"
+        ios-src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger-AR.usdz?v=1701718330863"
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
