--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <div id="card">
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger.glb?v=1701711551799"
+        src="/Airplane.glb"
         style="background-color: aliceblue;"
-        ios-src="https://cdn.glitch.me/e1358f26-98b6-4484-897c-fc7b9c084b08/Ranger-AR.usdz?v=1701718330863"
+        ios-src="/Airplane.usdz"
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
