--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <div id="card">
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="/Airplane.glb"
+        src="https://github.com/devcodar/testear.github.io/blob/main/Airplane.glb"
         style="background-color: aliceblue;"
-        ios-src="/Airplane.usdz"
+        ios-src="https://github.com/devcodar/testear.github.io/blob/main/Airplane.usdz"
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
