--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <div id="card">
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="https://github.com/devcodar/testear.github.io/blob/main/Airplane.glb"
+        src="https://cdn.glitch.me/58348e59-d013-4982-b247-b205cc548d6c/Airplane.glb?v=1706186624095"
         style="background-color: aliceblue;"
-        ios-src="https://github.com/devcodar/testear.github.io/blob/main/Airplane.usdz"
+        ios-src="https://cdn.glitch.me/58348e59-d013-4982-b247-b205cc548d6c/Airplane.usdz?v=1706186795801"
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
