--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         shadow-intensity="1"
         ar
         ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y">
+        <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+          👋 Activate AR
+      </button>
       </model-viewer>
       <section class="attribution">
         <span>
