--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
   <body>
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="https://cdn.glitch.me/58348e59-d013-4982-b247-b205cc548d6c/Airplane.glb?v=1706186624095"
+        src="https://cdn.glitch.global/da9ae8cb-7dd7-4878-b455-375813f2a15b/FullScale.glb?v=1709675289628"
         style="background-color: rgb(255, 255, 255);"
-        ios-src="https://cdn.glitch.me/58348e59-d013-4982-b247-b205cc548d6c/Airplane.usdz?v=1706186795801"
+        ios-src="https://cdn.glitch.me/da9ae8cb-7dd7-4878-b455-375813f2a15b/FullScale.usdz?v=1709675941824"
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
-        ar
-        ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y">
+        ar ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y">
         <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
           👋 Activate AR
       </button>
