--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         poster="#"
         alt="Ranger Performance"
         shadow-intensity="1"
+        max-camera-orbit="auto 90deg auto"
+        skybox-height="2m"
         ar ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y">
         <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
           👋 Activate AR
