--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <body>
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
+        autoplay
         id="model-viewer"
         src="https://cdn.glitch.global/da9ae8cb-7dd7-4878-b455-375813f2a15b/FullScale.glb?v=1709675289628"
         style="background-color: rgb(255, 255, 255);"
