--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
   <body>
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        autoplay
         id="model-viewer"
         src="https://cdn.glitch.global/da9ae8cb-7dd7-4878-b455-375813f2a15b/FullScale.glb?v=1709675289628"
         style="background-color: rgb(255, 255, 255);"
         ios-src="https://cdn.glitch.me/da9ae8cb-7dd7-4878-b455-375813f2a15b/FullScale.usdz?v=1709675941824"
+        autoplay
         poster="#"
-        alt="Ranger Performance"
+        alt="FullScale"
         shadow-intensity="2"
         max-camera-orbit="auto 90deg auto"
         skybox-height="2m"
-        ar ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y">
+        ar ar-placement="wall" camera-controls touch-action="pan-y">
         <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
           👋 Activate AR
       </button>
