--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         shadow-intensity="2"
         max-camera-orbit="auto 90deg auto"
         skybox-height="2m"
-        ar ar-placement="wall" camera-controls touch-action="pan-y">
+        ar ar-scale="fixed"  camera-controls touch-action="pan-y">
         <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
           👋 Activate AR
       </button>
