--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <body>
       <!-- All you need to put beautiful, interactive 3D content on your site: -->
       <model-viewer
-        src="https://cdn.glitch.global/da9ae8cb-7dd7-4878-b455-375813f2a15b/FullScale.glb?v=1709675289628"
-        style="background-color: rgb(255, 255, 255);"
-        ios-src="https://cdn.glitch.me/da9ae8cb-7dd7-4878-b455-375813f2a15b/FullScale.usdz?v=1709675941824"
+        src="https://cdn.glitch.me/b1113906-c465-4f42-885f-d487e1db2eb8/Atualizado.glb?v=1710381729933"
+        style="background-color: rgb(14, 11, 8);"
+        ios-src="https://cdn.glitch.me/b1113906-c465-4f42-885f-d487e1db2eb8/Atualizado.usdz?v=1710382683357"
         poster="#"
-        alt="Ranger Performance"
-        shadow-intensity="1"
+        alt="Fullscale"
+        shadow-intensity="2"
         ar ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y">
         <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
-          👋 Activate AR
+          👋 Ative AR
       </button>
       </model-viewer>
       </section>
