--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
         alt="Fullscale"
         shadow-intensity="2"
         ar ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y">
-        <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+        <button slot="ar-button" style="background-color: rgba(255, 255, 255, 0); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
           👋 Ative AR
       </button>
       </model-viewer>
       </section>
-
-    <script
+     <script
       type="module"
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
     ></script>
