--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         shadow-intensity="2"
         ar ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y">
         <button slot="ar-button" style="background-color: rgba(255, 255, 255, 0); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
-          👋 Ative AR
+          👋 Ativar AR
       </button>
       </model-viewer>
       </section>
