--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+virom<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>&lt;model-viewer&gt; example</title>
@@ -11,12 +11,14 @@
   <body>
      <model-viewer
         src="https://cdn.glitch.me/b1113906-c465-4f42-885f-d487e1db2eb8/Atualizado.glb?v=1710381729933"
-        style="background-color: rgb(255, 255, 255,0);"
+        style="background-color: #eee"
         ios-src="https://cdn.glitch.me/b1113906-c465-4f42-885f-d487e1db2eb8/Atualizado.usdz?v=1710382683357"
+        xr-environment
         poster="#"
         alt="Fullscale"
         shadow-intensity="1.5"
-        ar ar-modes="scene-viewer webxr quick-look" camera-controls touch-action="pan-y">
+        skybox-height="2m"
+        ar ar-scale="fixed" camera-controls touch-action="pan-y">
         <button slot="ar-button" style="background-color: rgba(255, 255, 255, 0); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
           👋 Ativar AR
       </button>
