--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
   <body>
      <model-viewer
         src="https://cdn.glitch.me/b1113906-c465-4f42-885f-d487e1db2eb8/Atualizado.glb?v=1710381729933"
-        style="background-color: #eee"
+        style="background-color: #fff"
         ios-src="https://cdn.glitch.me/b1113906-c465-4f42-885f-d487e1db2eb8/Atualizado.usdz?v=1710382683357"
         xr-environment
         poster="#"
         alt="Fullscale"
         shadow-intensity="1"
         ar ar-scale="fixed" camera-controls touch-action="pan-y"
-        <button slot="ar-button" style="background-color: rgba(255, 255, 255, 0); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
-          👋 Ativar AR
+        <button slot="ar-button" style="background-color: rgba(255, 255, 255, 0); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px;">
       </button>
       </model-viewer>
       </section>
