--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>FullScale AR</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="demo-styles.css" />
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  </head>
-  <body>
-     <model-viewer
-        src="https://cdn.glitch.me/b1113906-c465-4f42-885f-d487e1db2eb8/Atualizado.glb?v=1710381729933"
-        style="background-color: #fff"
-        ios-src="https://cdn.glitch.me/b1113906-c465-4f42-885f-d487e1db2eb8/Atualizado.usdz?v=1710382683357"
-        xr-environment
-        poster="#"
-        alt="Fullscale"
-        shadow-intensity="1"
-        ar ar-scale="fixed" camera-controls touch-action="pan-y"
-        <button slot="ar-button" style="background-color: rgba(255, 255, 255, 0); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px;">
-      </button>
-      </model-viewer>
-      </section>
-     <script
-      type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
-    ></script>
-  </body>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>360° Car Interior View</title>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <style>
+        body { margin: 0; }
+        a-scene { height: 100vh; }
+    </style>
+</head>
+<body>
+    <a-scene>
+        <a-sky src="/Previa de teste_360_BMW_F01.jpg" rotation="0 -90 0"></a-sky>
+
+        <!-- Add camera with universal controls -->
+        <a-entity id="cameraRig" position="0 1.6 0">
+            <a-entity camera look-controls wasd-controls="acceleration: 200">
+        </a-entity>
+
+        <!-- Lighting to improve visual quality -->
+        <a-entity light="type: ambient; intensity: 0.5"></a-entity>
+        <a-entity light="type: directional; intensity: 0.8; position: -1 1 0"></a-entity>
+    </a-scene>
+</body>
 </html>
