--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <a-scene>
-        <a-sky src="Previa de teste_360_BMW_F01.jpg" rotation="0 -90 0"></a-sky>
+        <a-sky src="panoramico_tiggo.jpeg" rotation="0 -90 0"></a-sky>
 
         <!-- Add camera with universal controls -->
         <a-entity id="cameraRig" position="0 1.6 0">
