--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <a-scene>
-        <a-sky src="tiggo.jpeg" rotation="0 -90 0"></a-sky>
+        <a-sky src="home.jpeg" rotation="0 -90 0"></a-sky>
 
         <!-- Add camera with universal controls -->
         <a-entity id="cameraRig" position="0 1.6 0">
