--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <a-scene>
-        <a-sky src="F-150_Cam_Int_Entrega-DANI_v02.jpg" rotation="0 -90 0"></a-sky>
+        <a-sky src="panoramico_tiggo.jpegg" rotation="0 -90 0"></a-sky>
 
         <!-- Add camera with universal controls -->
         <a-entity id="cameraRig" position="0 1.6 0">
