--- a/imersivo.html
+++ b/imersivo.html
@@ -6,6 +6,7 @@
     <title>360° Car Interior View</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
+    <script src="https://unpkg.com/aframe-haptics-component/dist/aframe-haptics-component.min.js"></script>
     <style>
         body { margin: 0; }
         a-scene { height: 100vh; }
@@ -18,9 +19,9 @@
         <!-- Add camera with universal controls -->
         <a-entity id="cameraRig" position="0 1.6 0">
             <a-entity camera look-controls wasd-controls="acceleration: 200">
-                <!-- Adding Hand Tracking -->
-                <a-entity oculus-hand="hand: left"></a-entity>
-                <a-entity oculus-hand="hand: right"></a-entity>
+                <!-- Adding Hand Controls for generic hand models -->
+                <a-entity hand-controls="hand: left; handModelStyle: lowPoly; color: #FF9900"></a-entity>
+                <a-entity hand-controls="hand: right; handModelStyle: lowPoly; color: #FF9900"></a-entity>
             </a-entity>
         </a-entity>
 
