--- a/index.html
+++ b/index.html
@@ -5,18 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>360° Car Interior View</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
+    <script src="https://unpkg.com/aframe-haptics-component/dist/aframe-haptics-component.min.js"></script>
     <style>
         body { margin: 0; }
         a-scene { height: 100vh; }
     </style>
 </head>
 <body>
-    <a-scene>
-        <a-sky src="F-150_Cam_Int_Entrega-DANI_v02.jpg" rotation="0 -90 0"></a-sky>
+    <a-scene vr-mode-ui="enabled: true">
+        <a-sky src="Previa de teste_360_BMW_F01.jpg" rotation="0 -90 0"></a-sky>
 
-        <!-- Add camera with universal controls -->
-        <a-entity id="cameraRig" position="0 1.6 0">
-            <a-entity camera look-controls wasd-controls="acceleration: 200">
+        <!-- Ajuste de escala e posição da câmera para VR -->
+        <a-entity id="cameraRig" position="3.11 -0.459 1.695">
+            <a-entity 
+                camera 
+                look-controls 
+                wasd-controls="acceleration: 200">
+                <!-- Ajuste de controle de mão para VR -->
+                <a-entity 
+                    hand-controls="hand: left; handModelStyle: lowPoly; color: #FF9900"
+                    scale="0.75 0.75 0.75"></a-entity>
+                <a-entity 
+                    hand-controls="hand: right; handModelStyle: lowPoly; color: #FF9900"
+                    scale="0.75 0.75 0.75"></a-entity>
+            </a-entity>
         </a-entity>
 
         <!-- Lighting to improve visual quality -->
@@ -25,3 +38,4 @@
     </a-scene>
 </body>
 </html>
+
