--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a-sky src="Previa de teste_360_BMW_F01.jpg" rotation="0 -90 0"></a-sky>
 
         <!-- Ajuste de escala e posição da câmera para VR -->
-        <a-entity id="cameraRig" position="3.11 -0.459 1.695">
+        <a-entity id="cameraRig" position="position="0 1.5 0">
             <a-entity 
                 camera 
                 look-controls 
