--- a/index.html
+++ b/index.html
@@ -14,37 +14,20 @@
 </head>
 <body>
     <a-scene vr-mode-ui="enabled: true">
-        <!-- Adição de um céu HDRI -->
-        <a-sky src="path/to/hdri-sky-texture.jpg"></a-sky> <!-- Substitua com o caminho para sua textura HDRI do céu -->
-        
-        <!-- Adição do chão HDRI ajustado para escala realista -->
-        <a-plane 
-            src="path/to/hdri-ground-texture.jpg" 
-            rotation="-90 0 0" 
-            width="50" 
-            height="50" 
-            repeat="10 10" 
-            position="0 0 0"></a-plane>
+        <a-sky src="Previa de teste_360_BMW_F01.jpg" rotation="0 -90 0"></a-sky>
 
-        <!-- Ajuste de escala e posição da câmera para VR -->
-        <a-entity id="cameraRig" position="0 1.5 0">
-            <a-entity 
-                camera 
-                look-controls 
-                wasd-controls="acceleration: 200">
-                <!-- Ajuste de controle de mão para VR -->
-                <a-entity 
-                    hand-controls="hand: left; handModelStyle: lowPoly; color: #FF9900"
-                    scale="0.75 0.75 0.75"></a-entity>
-                <a-entity 
-                    hand-controls="hand: right; handModelStyle: lowPoly; color: #FF9900"
-                    scale="0.75 0.75 0.75"></a-entity>
+        <!-- Add camera with universal controls -->
+        <a-entity id="cameraRig" position="0 1.6 0">
+            <a-entity camera look-controls wasd-controls="acceleration: 200">
+                <!-- Adding Hand Controls for generic hand models -->
+                <a-entity hand-controls="hand: left; handModelStyle: lowPoly; color: #FF9900"></a-entity>
+                <a-entity hand-controls="hand: right; handModelStyle: lowPoly; color: #FF9900"></a-entity>
             </a-entity>
         </a-entity>
 
-        <!-- Iluminação para melhorar a qualidade visual -->
-        <a-entity light="type: ambient; intensity: 0.7"></a-entity>
-        <a-entity light="type: directional; intensity: 0.8; position="-1 3 1"></a-entity>
+        <!-- Lighting to improve visual quality -->
+        <a-entity light="type: ambient; intensity: 0.5"></a-entity>
+        <a-entity light="type: directional; intensity: 0.8; position: -1 1 0"></a-entity>
     </a-scene>
 </body>
 </html>
