--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <a-scene vr-mode-ui="enabled: true">
-        <a-sky src="Previa de teste_360_BMW_F01.jpg" rotation="0 -90 0"></a-sky>
+        <a-sky src="F-150_Cam_Int_Entrega-DANI_v02.jpg" rotation="0 -90 0"></a-sky>
 
         <!-- Add camera with universal controls -->
         <a-entity id="cameraRig" position="0 1.6 0">
