--- a/ar.html
+++ b/ar.html
@@ -18,7 +18,7 @@
 <body>
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
-    <model-viewer src="/fullscale.glb"
+    <model-viewer src="https://cdn.glitch.me/e276ac49-f7a3-4f98-a53f-51b19809aec0/untitled.glb?v=1725066345667"
                   environment-image="aircraft_workshop_01_1k.hdr"
                   ar-scale="fixed"
                   ar-placement="floor"
