--- a/ar.html
+++ b/ar.html
@@ -22,7 +22,7 @@
                   environment-image="aircraft_workshop_01_1k.hdr"
                   ar-scale="fixed"
                   ar-placement="floor"
-                  ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878"
+                  ios-src="https://drive.google.com/uc?export=download&id=1qYmbTaAmBBsC_MYtQ_WEg6Zc1-sROoXJ&name=fullscalleandrei.usdz"
                   alt="A 3D model of fullscalle"
                   shadow-intensity="3"
                   camera-controls
