--- a/ar.html
+++ b/ar.html
@@ -22,12 +22,11 @@
                   environment-image="aircraft_workshop_01_1k.hdr"
                   ar-scale="fixed"
                   ar-placement="floor"
-                  ios-src="https://drive.google.com/uc?export=download&id=1qYmbTaAmBBsC_MYtQ_WEg6Zc1-sROoXJ&name=fullscalleandrei.usdz"
+                  ios-src="https://cdn.glitch.me/6c8304c0-d20b-4e36-89cd-738b6c053e8a/untitled.usdz?v=1725449395744"
                   alt="A 3D model of fullscalle"
                   shadow-intensity="3"
                   camera-controls
-                  auto-rotate ar
-                  xr-environment>
+                  auto-rotate ar>
     </model-viewer>
     <section class="attribution">
       <span>
