--- a/ar.html
+++ b/ar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>&lt;model-viewer&gt; example</title>
+    <title>FullScalle</title>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="demo-styles.css">
@@ -13,13 +13,14 @@
     
     <!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
     <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
-
+    <script src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   </head> 
 <body>
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
     <model-viewer src="https://cdn.glitch.me/e276ac49-f7a3-4f98-a53f-51b19809aec0/untitled.glb?v=1725066345667"
                   environment-image="aircraft_workshop_01_1k.hdr"
+                  ar environment-image="aircraft_workshop_01_1k.hdr"
                   ar-scale="fixed"
                   ar-placement="floor"
                   ios-src="https://cdn.glitch.me/6c8304c0-d20b-4e36-89cd-738b6c053e8a/untitled.usdz?v=1725449395744"
@@ -35,11 +36,5 @@
       </span>
     </section>   
   </div>
-  <!-- 💁 Include both scripts below to support all browsers! -->
-
-  <!-- Loads <model-viewer> for modern browsers: -->
-  <script type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-  </script>
 </body>
 </html>
