--- a/airtplane.html
+++ b/airtplane.html
@@ -30,7 +30,7 @@
   <!-- Componente model-viewer para renderizar o modelo 3D -->
   <model-viewer
     id="airplane-model"
-    src="seu-modelo-usdz.usdz"         <!-- Caminho para o modelo USDZ (avião) -->
+    src="Airplane.usdz"         <!-- Caminho para o modelo USDZ (avião) -->
     alt="Avião interativo" 
     ar                                 <!-- Habilita AR -->
     ar-modes="webxr scene-viewer quick-look"  <!-- Modos de AR disponíveis -->
