--- a/airtplane.html
+++ b/airtplane.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modelo 3D Interativo - Avião com AR</title>
+  <title>Modelo 3D Interativo - Avião com AR e GLB</title>
 
   <!-- Importando model-viewer para visualização 3D e AR -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
@@ -27,10 +27,10 @@
 </head>
 <body>
 
-  <!-- Componente model-viewer para renderizar o modelo 3D -->
+  <!-- Componente model-viewer para renderizar o modelo 3D com AR e GLB -->
   <model-viewer
     id="airplane-model"
-    src="Airplane.usdz"         <!-- Caminho para o modelo USDZ (avião) -->
+    src="seu-modelo.glb"              <!-- Caminho para o modelo GLB (avião) -->
     alt="Avião interativo" 
     ar                                 <!-- Habilita AR -->
     ar-modes="webxr scene-viewer quick-look"  <!-- Modos de AR disponíveis -->
@@ -38,7 +38,8 @@
     auto-rotate                           <!-- Rota automaticamente o modelo -->
     camera-controls                       <!-- Habilita controle da câmera -->
     ios-src="seu-modelo.usdz"             <!-- Arquivo USDZ para iOS -->
-    touch-action="none">                  <!-- Previne interação de toque padrão -->
+    touch-action="none"                   <!-- Previne interação de toque padrão -->
+    style="width: 100%; height: 100%;">
   </model-viewer>
 
   <script>
@@ -48,6 +49,7 @@
     // Função que altera o estado do modelo (voar ou pousar)
     let isFlying = false;  // Inicialmente o avião está "no chão"
 
+    // Função de interação do clique
     modelViewer.addEventListener("click", () => {
       if (!isFlying) {
         // Quando o avião está no chão, faz ele "voar" (reduz a escala e sobe)
@@ -59,6 +61,13 @@
         modelViewer.scale = "1 1 1";         // Tamanho real
         modelViewer.position = "0 0 0";     // Coloca o modelo no chão
         isFlying = false;
+      }
+    });
+
+    // Checando se o modelo está em AR e adaptando conforme
+    modelViewer.addEventListener("ar-status", (event) => {
+      if (event.detail.status === "failed") {
+        alert("AR não suportado neste dispositivo. Visualizando o modelo 3D.");
       }
     });
   </script>
