--- a/airtplane.html
+++ b/airtplane.html
@@ -30,14 +30,14 @@
   <!-- Componente model-viewer para renderizar o modelo 3D com AR e GLB -->
   <model-viewer
     id="airplane-model"
-    src="seu-modelo.glb"              <!-- Caminho para o modelo GLB (avião) -->
+    src="Airplane.glb"              <!-- Caminho para o modelo GLB (avião) -->
     alt="Avião interativo" 
     ar                                 <!-- Habilita AR -->
     ar-modes="webxr scene-viewer quick-look"  <!-- Modos de AR disponíveis -->
-    environment-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k_HDR.hdr"  <!-- Ambiente HDR para iluminação -->
+    environment-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k_HDR.hdr"  
     auto-rotate                           <!-- Rota automaticamente o modelo -->
     camera-controls                       <!-- Habilita controle da câmera -->
-    ios-src="seu-modelo.usdz"             <!-- Arquivo USDZ para iOS -->
+    ios-src="Airplane.usdz"             <!-- Arquivo USDZ para iOS -->
     touch-action="none"                   <!-- Previne interação de toque padrão -->
     style="width: 100%; height: 100%;">
   </model-viewer>
