--- a/airplane.html
+++ b/airplane.html
@@ -16,6 +16,7 @@
                   environment-image="aircraft_workshop_01_1k.hdr"
                   ar environment-image="aircraft_workshop_01_1k.hdr"
                   ar-scale="fixed"
+                  ar-modes="scene-viewer quick-look"
                   ar-placement="floor"
                   ios-src="Airplane.usdz"
                   alt="A 3D model of fullscalle"
