--- a/airplane.html
+++ b/airplane.html
@@ -11,6 +11,9 @@
   </head> 
 <body>
   <div id="card">
+    <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+      👋 Activate AR
+  </button>
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
     <model-viewer src="Airplane.glb"
                   environment-image="aircraft_workshop_01_1k.hdr"
@@ -18,7 +21,7 @@
                   ar-scale="fixed"
                   ar-modes="scene-viewer quick-look"
                   ar-placement="floor"
-                  ios-src="Airplane.usdz"
+                  ios-src="https://cdn.glitch.me/8b9b089c-40ec-48e5-8186-0754bb69a3b2/Airplane.usdz?v=1733400980759"
                   alt="A 3D model of fullscalle"
                   shadow-intensity="3"
                   camera-controls
