--- a/airplane.html
+++ b/airplane.html
@@ -21,7 +21,7 @@
                   ar-scale="fixed"
                   ar-modes="scene-viewer quick-look"
                   ar-placement="floor"
-                  ios-src="https://cdn.glitch.me/8b9b089c-40ec-48e5-8186-0754bb69a3b2/Airplane.usdz"
+                  ios-src="Airplane_Senai.usdz"
                   alt="A 3D model of fullscalle"
                   shadow-intensity="3"
                   camera-controls
