--- a/testevr.html
+++ b/testevr.html
@@ -94,42 +94,6 @@
       document.getElementById('status').innerText = 'Modelo carregado!';
     }
 
-    // Trocar entre câmera frontal e traseira
-    switchCameraBtn.addEventListener('click', async () => {
-      usingFrontCamera = !usingFrontCamera; // Alterna entre as câmeras
-      const facingMode = usingFrontCamera ? "user" : "environment";
-      await setupCamera(facingMode); // Configura a câmera com o novo facingMode
-    });
-
-    // Atualizar o mapa de calor com base na detecção
-    function updateHeatmap(predictions) {
-      predictions.forEach(prediction => {
-        const [x, y, width, height] = prediction.bbox;
-        const size = width * height;
-
-        // Normalizar o tamanho e definir intensidade (maior objeto = maior intensidade)
-        const intensity = Math.min(size / (canvas.width * canvas.height), 1);
-
-        heatmap.push({ x: x + width / 2, y: y + height / 2, intensity });
-      });
-    }
-
-    // Renderizar o mapa de calor
-    function renderHeatmap() {
-      ctx.save();
-      heatmap.forEach(point => {
-        const gradient = ctx.createRadialGradient(point.x, point.y, 0, point.x, point.y, 50);
-        gradient.addColorStop(0, `rgba(255, 0, 0, ${point.intensity})`);
-        gradient.addColorStop(1, "rgba(255, 0, 0, 0)");
-
-        ctx.beginPath();
-        ctx.arc(point.x, point.y, 50, 0, 2 * Math.PI);
-        ctx.fillStyle = gradient;
-        ctx.fill();
-      });
-      ctx.restore();
-    }
-
     // Atualizar as métricas
     function updateMetrics(predictions) {
       predictions.forEach(prediction => {
@@ -158,6 +122,8 @@
 
     // Detectar objetos no vídeo
     async function detectObjects() {
+      if (!model) return;
+
       canvas.width = videoElement.videoWidth;
       canvas.height = videoElement.videoHeight;
 
@@ -166,9 +132,8 @@
       // Limpar o canvas
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      // Atualizar métricas e mapa de calor
+      // Atualizar métricas
       updateMetrics(predictions);
-      updateHeatmap(predictions);
 
       // Renderizar bounding boxes e rótulos
       predictions.forEach((prediction) => {
@@ -187,12 +152,17 @@
         ctx.fillText(text, x, y > 10 ? y - 5 : 10);
       });
 
-      // Renderizar o mapa de calor
-      renderHeatmap();
-
       // Continuar detectando no próximo frame
       requestAnimationFrame(detectObjects);
     }
+
+    // Trocar entre câmera frontal e traseira
+    switchCameraBtn.addEventListener('click', async () => {
+      usingFrontCamera = !usingFrontCamera; // Alterna entre as câmeras
+      const facingMode = usingFrontCamera ? "user" : "environment";
+      await setupCamera(facingMode); // Configura a câmera com o novo facingMode
+      detectObjects(); // Reinicia a detecção com o novo feed
+    });
 
     // Inicializar o sistema
     async function init() {
