--- a/testevr.html
+++ b/testevr.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Identificação de Objetos com COCO</title>
+  <title>Identificação de Objetos com Dimensões Reais</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
   <style>
@@ -30,16 +30,10 @@
       margin-left: auto;
       margin-right: auto;
     }
-    #switchCamera {
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
-  <h1>Identificação de Objetos - COCO Dataset</h1>
+  <h1>Identificação de Objetos - Dimensões Reais</h1>
   <video id="videoElement" autoplay playsinline muted></video>
   <canvas id="canvas"></canvas>
   <p id="status">Carregando modelo...</p>
@@ -47,34 +41,27 @@
     <h2>Métricas de Detecção</h2>
     <ul id="metricsList"></ul>
   </div>
-  <button id="switchCamera">Trocar Câmera</button>
 
   <script>
     const videoElement = document.getElementById('videoElement');
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     const metricsList = document.getElementById('metricsList');
-    const switchCameraBtn = document.getElementById('switchCamera');
 
     let model;
-    let currentStream; // Stream atual
-    let usingFrontCamera = true; // Flag para alternar entre câmera frontal e traseira
-    const heatmap = []; // Mapa de calor para detecções
     const objectMetrics = {}; // Métricas por classe de objeto
 
-    // Configurar e acessar a câmera
-    async function setupCamera(facingMode = "user") {
-      // Interrompe o stream atual, se existir
-      if (currentStream) {
-        currentStream.getTracks().forEach(track => track.stop());
-      }
+    // Definir parâmetros da câmera
+    const CAMERA_FOV_CM = 40; // Largura real aproximada do campo de visão da câmera em centímetros
+    const CAMERA_DISTANCE_CM = 50; // Distância da câmera ao objeto em centímetros
 
+    // Configurar e acessar a câmera
+    async function setupCamera() {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({
-          video: { facingMode },
+          video: { width: 640, height: 480 },
         });
         videoElement.srcObject = stream;
-        currentStream = stream;
 
         return new Promise((resolve) => {
           videoElement.onloadedmetadata = () => {
@@ -94,36 +81,46 @@
       document.getElementById('status').innerText = 'Modelo carregado!';
     }
 
+    // Converter dimensões em pixels para centímetros
+    function convertToRealDimensions(bbox, videoWidth, videoHeight) {
+      const [x, y, width, height] = bbox;
+      const realWidth = (width / videoWidth) * CAMERA_FOV_CM; // Largura real
+      const realHeight = (height / videoHeight) * (CAMERA_FOV_CM * (videoHeight / videoWidth)); // Altura real
+      const realArea = (realWidth * realHeight) / 10000; // Área em m²
+
+      return { realWidth, realHeight, realArea };
+    }
+
     // Atualizar as métricas
     function updateMetrics(predictions) {
+      metricsList.innerHTML = ""; // Limpar métricas na tela
+
       predictions.forEach(prediction => {
         const { class: className, bbox } = prediction;
+
+        // Dimensões reais
+        const { realWidth, realHeight, realArea } = convertToRealDimensions(
+          bbox,
+          videoElement.videoWidth,
+          videoElement.videoHeight
+        );
 
         // Contar a quantidade de vezes que cada classe é detectada
         if (!objectMetrics[className]) {
           objectMetrics[className] = { count: 0, sizes: [] };
         }
         objectMetrics[className].count += 1;
+        objectMetrics[className].sizes.push({ realWidth, realHeight, realArea });
 
-        // Armazenar tamanhos dos objetos detectados
-        const size = bbox[2] * bbox[3]; // Largura * Altura
-        objectMetrics[className].sizes.push(size);
-      });
-
-      // Atualizar lista de métricas na tela
-      metricsList.innerHTML = "";
-      for (const [className, data] of Object.entries(objectMetrics)) {
-        const averageSize = data.sizes.reduce((a, b) => a + b, 0) / data.sizes.length;
+        // Adicionar métricas à interface
         const listItem = document.createElement("li");
-        listItem.textContent = `Classe: ${className}, Detecções: ${data.count}, Tamanho médio: ${averageSize.toFixed(2)} pixels²`;
+        listItem.textContent = `Classe: ${className}, Largura: ${realWidth.toFixed(2)} cm, Altura: ${realHeight.toFixed(2)} cm, Área: ${realArea.toFixed(4)} m²`;
         metricsList.appendChild(listItem);
-      }
+      });
     }
 
     // Detectar objetos no vídeo
     async function detectObjects() {
-      if (!model) return;
-
       canvas.width = videoElement.videoWidth;
       canvas.height = videoElement.videoHeight;
 
@@ -156,17 +153,9 @@
       requestAnimationFrame(detectObjects);
     }
 
-    // Trocar entre câmera frontal e traseira
-    switchCameraBtn.addEventListener('click', async () => {
-      usingFrontCamera = !usingFrontCamera; // Alterna entre as câmeras
-      const facingMode = usingFrontCamera ? "user" : "environment";
-      await setupCamera(facingMode); // Configura a câmera com o novo facingMode
-      detectObjects(); // Reinicia a detecção com o novo feed
-    });
-
     // Inicializar o sistema
     async function init() {
-      await setupCamera(); // Inicializa com a câmera frontal
+      await setupCamera();
       await loadModel();
       detectObjects();
     }
