--- a/testevr.html
+++ b/testevr.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Identificação de Objetos com Dimensões Reais</title>
+  <title>Identificação de Objetos - Rastreamento Único</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
   <style>
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-  <h1>Identificação de Objetos - Dimensões Reais</h1>
+  <h1>Identificação de Objetos - Rastreamento Único</h1>
   <video id="videoElement" autoplay playsinline muted></video>
   <canvas id="canvas"></canvas>
   <p id="status">Carregando modelo...</p>
@@ -60,10 +60,8 @@
     let currentStream; // Stream atual
     let usingFrontCamera = true; // Flag para alternar entre câmera frontal e traseira
     const objectMetrics = {}; // Métricas por classe de objeto
-
-    // Parâmetros da câmera
-    const CAMERA_FOV_CM = 40; // Largura real aproximada do campo de visão da câmera em centímetros
-    const CAMERA_DISTANCE_CM = 50; // Distância da câmera ao objeto em centímetros
+    const trackedObjects = []; // Lista de objetos rastreados
+    const OBJECT_DISTANCE_THRESHOLD = 50; // Distância máxima para considerar o mesmo objeto (em pixels)
 
     // Configurar e acessar a câmera
     async function setupCamera(facingMode = "user") {
@@ -97,14 +95,29 @@
       document.getElementById('status').innerText = 'Modelo carregado!';
     }
 
-    // Converter dimensões em pixels para centímetros
-    function convertToRealDimensions(bbox, videoWidth, videoHeight) {
+    // Verificar se um objeto já foi rastreado recentemente
+    function isNewObject(className, bbox) {
       const [x, y, width, height] = bbox;
-      const realWidth = (width / videoWidth) * CAMERA_FOV_CM; // Largura real
-      const realHeight = (height / videoHeight) * (CAMERA_FOV_CM * (videoHeight / videoWidth)); // Altura real
-      const realArea = (realWidth * realHeight) / 10000; // Área em m²
 
-      return { realWidth, realHeight, realArea };
+      for (let obj of trackedObjects) {
+        if (
+          obj.className === className &&
+          Math.abs(obj.x - x) < OBJECT_DISTANCE_THRESHOLD &&
+          Math.abs(obj.y - y) < OBJECT_DISTANCE_THRESHOLD
+        ) {
+          return false; // Objeto já rastreado
+        }
+      }
+
+      // Adicionar o novo objeto ao rastreamento
+      trackedObjects.push({ className, x, y, width, height });
+
+      // Limitar o tamanho do rastreamento para evitar memória excessiva
+      if (trackedObjects.length > 100) {
+        trackedObjects.shift();
+      }
+
+      return true;
     }
 
     // Atualizar as métricas
@@ -114,23 +127,18 @@
       predictions.forEach(prediction => {
         const { class: className, bbox } = prediction;
 
-        // Dimensões reais
-        const { realWidth, realHeight, realArea } = convertToRealDimensions(
-          bbox,
-          videoElement.videoWidth,
-          videoElement.videoHeight
-        );
+        // Verificar se é um novo objeto
+        if (!isNewObject(className, bbox)) return;
 
         // Contar a quantidade de vezes que cada classe é detectada
         if (!objectMetrics[className]) {
-          objectMetrics[className] = { count: 0, sizes: [] };
+          objectMetrics[className] = 0;
         }
-        objectMetrics[className].count += 1;
-        objectMetrics[className].sizes.push({ realWidth, realHeight, realArea });
+        objectMetrics[className] += 1;
 
         // Adicionar métricas à interface
         const listItem = document.createElement("li");
-        listItem.textContent = `Classe: ${className}, Largura: ${realWidth.toFixed(2)} cm, Altura: ${realHeight.toFixed(2)} cm, Área: ${realArea.toFixed(4)} m²`;
+        listItem.textContent = `Classe: ${className}, Quantidade: ${objectMetrics[className]}`;
         metricsList.appendChild(listItem);
       });
     }
